welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: reassignment to val
	if (getCouleurSol=Color.lightGray) avance;
                         ^