welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
	var ColorCase=false
	if (getCouleurSol=Color.lightGray) avance;
	getCouleurSol() match{
		case Color.green => ColorCase=true
		case _ => if (!estFaceMur) recule;
	}
	return ColorCase
}